hphp/test/zend/good/Zend/tests/jump10.php.expectf

Fatal error: 'goto' into loop or switch statement is disallowed in %s/jump10.php on line 1
